RESOLVED FIXED 279154
Fix unused function warning in CSSPropertyParserConsumer+Font.cpp
https://bugs.webkit.org/show_bug.cgi?id=279154
Summary Fix unused function warning in CSSPropertyParserConsumer+Font.cpp
Don Olmstead
Reported 2024-09-04 16:05:19 PDT
...
Attachments
Don Olmstead
Comment 1 2024-09-04 16:09:45 PDT
EWS
Comment 2 2024-09-06 10:07:17 PDT
Committed 283273@main (012701e81ed5): <https://commits.webkit.org/283273@main> Reviewed commits have been landed. Closing PR #33148 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-06 10:08:15 PDT
Note You need to log in before you can comment on or make changes to this bug.