Fix unused function warning in CSSPropertyParserConsumer+Font.cpp https://bugs.webkit.org/show_bug.cgi?id=279154

Unreviewed warning fix.

Guard `isFontStyleAngleInRange` which is only used when `ENABLE(VARIATION_FONTS)` is `ON`.

* Source/WebCore/css/parser/CSSPropertyParserConsumer+Font.cpp:

Canonical link: https://commits.webkit.org/283273@main